change the way to coerce the boolean value

--- a/examples/templates/simple.njk
+++ b/examples/templates/simple.njk
@@ -18,9 +18,7 @@
   {{ super() }}
   <div class="container-fluid">
     <div class="mt-3">
-      <h1>
-        Joiform simple example
-      </h1>
+      <h2> simple Joiform example </h2>
     </div>
 
     <hr>
