--- a/examples/templates/simple.njk
+++ b/examples/templates/simple.njk
@@ -18,7 +18,9 @@
   {{ super() }}
   <div class="container-fluid">
     <div class="mt-3">
-      <h2> simple Joiform example </h2>
+      <h2>
+        simple Joiform example
+      </h2>
     </div>
 
     <hr>
