--- a/examples/templates/index.njk
+++ b/examples/templates/index.njk
@@ -1,9 +1,13 @@
 {% extends 'base.njk' %}
 
-
 {% block body %}
   {{ super() }}
-  <div class="container-fluid">
-    <a href="/simple">simple example</a>
+  <div class="container">
+    <div class="py-5 text-center">
+      {# <img class="d-block mx-auto mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> #}
+      <h2>joiform</h2>
+      <p class="lead">demos</p>
+      <a href="/simple">simple registration form</a>
+    </div>
   </div>
 {% endblock %}
